Basic enemy wave class, enemy type manager etc

--- a/src/ProjectBowtie/ProjectBowtie/ProjectBowtie.csproj
+++ b/src/ProjectBowtie/ProjectBowtie/ProjectBowtie.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Player.cs" />
     <Compile Include="PlayerMovement.cs" />
     <Compile Include="MapHandler.cs" />
+    <Compile Include="Enemy.cs" />
+    <Compile Include="WaveSpawnConfiguration.cs" />
+    <Compile Include="EnemyRegister.cs" />
+    <Compile Include="EnemyConfiguration.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
